gcc/testsuite/g++.dg/overload/volatile1.C
// PR c++/48118

struct A { };

void f (A);			// { dg-message "" }
void (*g)(A);

int main()
{
  volatile A a;
  f(a);				// { dg-error "" }
  g(a);				// { dg-error "" }
}
